[package]
name = "csci320-match3"
version = "1.0.0"
authors = ["Simon Reid <reidst@hendrix.edu>"]
edition = "2021"
license = "MIT"
description = "Runs a match-3 game in VGA graphics on an x86-64 CPU"
readme = "README.md"
repository = "https://github.com/reidst/csci320-match3"
keywords = ["x86-interrupts", "teaching-os"]
categories = ["no-std", "hardware-support"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8" # Can't upgrade to 0.10
volatile = "0.3" # Can't upgrade to 0.4
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10"
pc-keyboard = "0.5" # Can't upgrade to 0.6

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
